# nix-config

./: .gitignore  README.md  configuration.nix  convert_to_mp3.desktop  flake.nix  flake.nnix  hardware-configuration.nix  home.nix  result  📋 Todo
home/: daren.nix  dolphin.nix
hosts/VM/: hardware-configuration.nix  vm-hardware-copy.nix
modules/: gstreamer.nix  librewolf.nix  python.nix
modules/browsers/: librewolf.nix
modules/home-manager/: bashrc.nix  default.nix  fonts.nix  git.nix  lsd.nix  plasma-manger.nix
modules/home-manager/bashrc/: .ls_colors.sh  bashrc.nix
modules/numpy/: flake.nix  old.python-packages.nix
modules/pkgs/: dolphin.nix  helium-browser.nix  python.nix
modules/pyutube/: default.nix.old  defualt.nix  flake.nix  flake.old_nix  pyproject.toml  python-packages.nix  result  shell.nix
modules/wm/kde-plasma/: kde-material-you-colors.nix  plasma-panel-colorizer.nix  plasma-panel.nix  test.nix
users/: daren.nix  default.nix
