# Author: Peter Dragos
# Repository: https://github.com/dragospe/python-flake-template
[tool.poetry]
name = "app"
version = "0.1.0"
description = "pyutube"
authors = ["Peter Dragos"]

[tool.poetry.dependencies]
setuptools = "75.6.0"
typer = "0.15.1"
requests = "2.32.3"
rich = "13.9.4"
yaspin = "3.1.0"
pytubefix = "8.8.1"
inquirer = "3.4.0"
termcolor = "2.3.0"
moviepy = "2.1.1"
mypy = "0.961"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
app = 'app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


